fixed a bug where indices displayed in the equation history were too large

--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ footer ul {
     padding: 0 0.6rem;
 }
 
-.indices {
+#calculation .indices {
     font-size: 2rem;
 }
 
